test/valid/56269_boolean/boolean.agu
-- Author: 56269, Frederico Prazeres

let main(_) : Unit -> Unit = 
    print(if true 
        then true 
            else false)
