test/invalid-semantic/64361_wrong_type_return/wrong_type_return.agu
-- Author: fc64361 , Gustavo Henriques

let isGreaterThanTwo(x) : Int -> String = -- semantic error: this function should return a boolean, not a string
    if x > 2 then true else  false